# micu-image-mcp

./: .env.example  .gitignore  README-TS.md  README.md  install-ts.mjs  install.py  package.json  pyproject.toml  server.py  tsconfig.json
micu_image_mcp/: __init__.py  config.py  extract.py  http_client.py  io_safety.py  locks.py  routing.py  save.py  sizes.py
rust/: Cargo.toml  README.md
rust/src/: config.rs  http.rs  lock.rs  main.rs  routing.rs  sandbox.rs  tools.rs
src/: config.ts  http.ts  index.ts  lock.ts  routing.ts  save.ts  validation.ts
src/tools/: image_generate.ts  server_info.ts
tests/: _common.py  perf_bench.py  smoke_local.py  stress_concurrent.py
tests/unit/: conftest.py  test_image_inspection.py  test_locks.py  test_multi_reference_edits.py  test_paths.py  test_retry.py  test_routing.py  test_size.py  test_size_inference.py  test_ssrf.py  test_tools.py
