[package]
name = "micu-image-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server for 米醋 (micuapi.ai) gpt-image-2 / gpt-image-2-pro — Rust port"
license = "Apache-2.0"
repository = "https://github.com/Subaru486desuwa/micu-image-mcp"

[[bin]]
name = "micu-image-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.6", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "sync", "fs", "time", "process"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
anyhow = "1"
thiserror = "2"
fs2 = "0.4"
base64 = "0.22"
once_cell = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
dirs = "5"
rand = "0.8"
regex = "1"
url = "2"
mime = "0.3"
mime_guess = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
